隐藏重要信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,8 +45,8 @@ spring.datasource.druid.stat-view-servlet.login-username=druid
 spring.datasource.druid.stat-view-servlet.login-password=druid123
 # javamail ≈‰÷√
 spring.mail.host=smtp.163.com
-spring.mail.username=liuluyao890723@163.com
-spring.mail.password=liuluyao
+spring.mail.username=**
+spring.mail.password=**
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
