隐藏重要信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #公共配置文件
 #表示使用单独的配置文件针对于不同环境
 #spring.profiles.active=dev
-
+spring.profiles.active=dev
+spring.application.name=demo
 #thymelea模板配置
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -19,20 +20,30 @@ spring.datasource.username=root
 spring.datasource.password=root
 #druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.filters=stat
-spring.datasource.maxActive= 20
-spring.datasource.initialSize= 1
-spring.datasource.maxWait= 60000
-spring.datasource.minIdle =1
-spring.datasource.timeBetweenEvictionRunsMillis= 60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery= select 'x'
-spring.datasource.testWhileIdle= true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn= false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxOpenPreparedStatements= 20
-
+# 初始化大小，最小，最大
+spring.datasource.druid.initial-size=5  
+spring.datasource.h.initial-size=5  
+spring.datasource.druid.min-idle=5  
+spring.datasource.druid.max-active=20
+# 配置获取连接等待超时的时间
+spring.datasource.druid.max-wait=60000  
+#配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.druid.time-between-eviction-runs-millis=60000  
+#配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.druid.min-evictable-idle-time-millis=300000  
+#用来验证数据库连接的查询语句
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL  
+spring.datasource.druid.test-while-idle=true  
+spring.datasource.druid.test-on-borrow=false  
+spring.datasource.druid.test-on-return=false  
+spring.datasource.druid.pool-prepared-statements=true  
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20  
+#配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+spring.datasource.druid.filters=stat,wall
+# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+# 合并多个DruidDataSource的监控数据
+spring.datasource.useGlobalDataSourceStat=true
 ## druid 监控
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.web-stat-filter.url-pattern=/*
@@ -43,10 +54,25 @@ spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 spring.datasource.druid.stat-view-servlet.login-username=druid
 spring.datasource.druid.stat-view-servlet.login-password=druid123
+# JPA 配置
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#mybatis配置
+mybatis.mapper-locations=classpath:/mapping/*.xml
+# redis 配置
+spring.redis.host=192.168.40.128
+spring.redis.port=6379
+# 缓存过期时间，单位毫秒
+spring.cache.redis.time-to-live=600000
+# 缓存类型（ehcache、redis）
+spring.cache.type=redis
+
+# 打印日志，查看 sql
+logging.level.com.example.demo=DEBUG
 # javamail 配置
 spring.mail.host=smtp.163.com
-spring.mail.username=**
-spring.mail.password=**
+spring.mail.username=liuluyao890723@163.com
+spring.mail.password=liuluyao
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -57,3 +83,44 @@ spring.servlet.multipart.max-request-size=10Mb
 #设定静态文件路径，js,css等
 spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+###producer
+#该应用是否启用生产者
+rocketmq.producer.isOnOff=on
+#发送同一类消息的设置为同一个group，保证唯一,默认不需要设置，rocketmq会使用ip@pid(pid代表jvm名字)作为唯一标示
+rocketmq.producer.groupName=${spring.application.name}
+#mq的nameserver地址
+rocketmq.producer.namesrvAddr=192.168.40.128:9876
+#消息最大长度 默认1024*4(4M)
+rocketmq.producer.maxMessageSize=4096
+#发送消息超时时间,默认3000
+rocketmq.producer.sendMsgTimeout=3000
+#发送消息失败重试次数，默认2
+rocketmq.producer.retryTimesWhenSendFailed=2
+
+
+###consumer
+##该应用是否启用消费者
+rocketmq.consumer.isOnOff=on
+rocketmq.consumer.groupName=${spring.application.name}
+#mq的nameserver地址
+rocketmq.consumer.namesrvAddr=192.168.40.128:9876
+#该消费者订阅的主题和tags("*"号表示订阅该主题下所有的tags),格式：topic~tag1||tag2||tag3;topic2~*;
+rocketmq.consumer.topics=DemoTopic~*;
+rocketmq.consumer.consumeThreadMin=20
+rocketmq.consumer.consumeThreadMax=64
+#设置一次消费消息的条数，默认为1条
+rocketmq.consumer.consumeMessageBatchMaxSize=1
+
+# fastDFS 配置
+fdfs.so-timeout=150
+fdfs.connect-timeout=60
+fdfs.thumb-image.width=150
+fdfs.thumb-image.height=150
+fdfs.web-server-url=192.168.40.128/
+fdfs.tracker-list[0]=192.168.40.128:22122
+fdfs.pool.jmx-enabled=false
+#zookeeper
+#spring.zookeeper.connectString=1192.168.40.128:2181
+#spring.zookeeper.sessionTimeout=6000
+#spring.zookeeper.watcher=1
+
